Bug 92547 - incorrect input values shown in formula wizard
Summary: incorrect input values shown in formula wizard
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other All
: medium normal
Assignee: Ben
URL:
Whiteboard: target:5.1.0
Keywords:
Depends on:
Blocks:
 
Reported: 2015-07-04 20:11 UTC by Markus Mohrhard
Modified: 2016-10-25 19:23 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
test file (8.05 KB, application/vnd.oasis.opendocument.spreadsheet)
2015-07-04 20:11 UTC, Markus Mohrhard
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Markus Mohrhard 2015-07-04 20:11:48 UTC
Created attachment 117049 [details]
test file

The attached file does not show the correct input values for the second SUM.
Comment 1 Markus Mohrhard 2015-07-04 20:12:24 UTC
@Ben: One for you.
Comment 2 Commit Notification 2015-07-06 15:39:02 UTC
Benjamin Ni committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6a01844a9f504c40758daa570724f1983ab1be79

tdf#92547 - incorrect input values shown in formula wizard

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2015-07-27 18:04:07 UTC
Benjamin Ni committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3cb68ecffa507eb839552e3d55369faf915fae81

fix test for tdf#92547

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.