tdf#92547 - incorrect input values shown in formula wizard

Change-Id: I55dd98b1613376c8e1c83af8ffdc66a58e022cb1